--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FF0202</color>
     <color name="purple">#9C27B0</color>
+    <color name="blue">#2196F3</color>
 </resources>
