--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="horizontal"
-        android:layout_weight="9"
+        android:layout_weight="7"
         android:background="@color/red"
         android:layout_height="0dp">
 
@@ -21,6 +21,12 @@
             android:background="@color/white"
             android:layout_height="match_parent">
 
+            <TextView
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:text="TEAM A"
+                android:textStyle="bold"
+                android:layout_height="wrap_content"/>
         </LinearLayout>
 
         <LinearLayout
@@ -37,8 +43,12 @@
     </LinearLayout>
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_weight="1"
+        android:layout_width="wrap_content"
+        android:backgroundTint="@color/blue"
+        android:gravity="center"
+        android:text="RESET"
+        android:layout_gravity="center"
+        android:layout_weight="2"
         android:layout_height="0dp"/>
 
 
