--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,6 +9,6 @@
 
     <style name="Theme.MyApp" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <item name="windowActionBar">true</item>
-        <item name="windowNoTitle">true</item>
+        <item name="windowNoTitle">false</item>
     </style>
 </resources>
