--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="red">#FF0202</color>
-    <color name="purple">#9C27B0</color>
-    <color name="blue">#2196F3</color>
+    <color name="green">#99BB03</color>
+    <color name="red">#FF5745</color>
+    <color name="red_D84315">#D84315</color>
+    <color name="blue">#28ABE2</color>
+    <color name="blue_5969C0">#5969C0</color>
+    <color name="blue_0297FF">#0297FF</color>
+    <color name="purple">#AA74CA</color>
+    <color name="grey">#A7A7A7</color>
+    <color name="grey_D3D3D3">#D3D3D3</color>
+    <color name="white">#FFFFFF</color>
+    <color name="white_F4F4F4">#F4F4F4</color>
+    <color name="blue_3700B3">#3700B3</color>
 </resources>
