--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,8 +7,77 @@
 
     <style name="Theme.ScoreBoard" parent="Base.Theme.ScoreBoard" />
 
-    <style name="Theme.MyApp" parent="Theme.MaterialComponents.Light.DarkActionBar">
+    <style name="Theme.MyApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="windowActionBar">true</item>
         <item name="windowNoTitle">false</item>
+
+        <item name="colorPrimary">@color/blue_5969C0</item>
+        <item name="android:textColorPrimary">@color/red</item> <!-- Màu chữ -->
+
+<!--        <item name="actionBarStyle">@style/MyActionBarStyle</item>-->
+    </style>
+
+    <style name="LabelName">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/s_50</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="LabelTeamScore">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">@dimen/d_30</item>
+        <item name="android:layout_marginBottom">@dimen/d_30</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/d_50</item>
+    </style>
+
+    <style name="PlusButton">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_margin">@dimen/d_10</item>
+        <item name="android:backgroundTint">@color/blue_0297FF</item>
+    </style>
+
+    <style name="ResetButton">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:backgroundTint">@color/grey_D3D3D3</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="LayoutChild">
+        <item name="android:layout_width">@dimen/d_0</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_marginEnd">@dimen/d_1</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:background">@color/white_F4F4F4</item>
+        <item name="android:gravity">center</item>
+        <item name="android:orientation">vertical</item>
+        <item name="android:padding">@dimen/d_20</item>
+    </style>
+
+    <style name="LayoutPart2">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/d_0</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:background">@color/white_F4F4F4</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="LayoutParent">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/d_0</item>
+        <item name="android:layout_weight">9</item>
+        <item name="android:background">@color/grey</item>
+        <item name="android:baselineAligned">false</item>
+        <item name="android:orientation">horizontal</item>
     </style>
 </resources>
