--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="white">#FFFFFF</color>
     <color name="white_F4F4F4">#F4F4F4</color>
     <color name="blue_3700B3">#3700B3</color>
+    <color name="orange_FF5722">#FF5722</color>
 </resources>
